// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Menu /> > Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_menu_33ee5b"
    data-headlessui-state=""
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="_button_0829c1 _button--layout-right_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 _menu__button_33ee5b"
      data-headlessui-state=""
      id="headlessui-menu-button-:r2:"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Actions
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<Menu /> > MenuWithAvatarButton story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_menu_33ee5b"
    data-headlessui-state=""
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      data-headlessui-state=""
      id="headlessui-menu-button-:r10:"
      type="button"
    >
      <div
        aria-label="Avatar for user Josie Sandberg"
        class="_avatar_814665 _avatar--is-interactive_814665 _avatar--md_814665 _avatar--text_814665 _avatar--color-scheme-0_814665"
        role="img"
      >
        <span
          class="_text_b3eba3 _text--label-sm_b3eba3"
        >
          JS
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Menu /> > MenuWithIconButton story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_menu_33ee5b"
    data-headlessui-state=""
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      data-headlessui-state=""
      id="headlessui-menu-button-:r16:"
      type="button"
    >
      <svg
        class="_icon_779da8"
        fill="currentColor"
        height="32px"
        role="img"
        style="--icon-size: 32px;"
        viewBox="0 0 24 24"
        width="32px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          show more
        </title>
        <path
          d="M12 19.269C11.5875 19.269 11.2344 19.1221 10.9408 18.8282C10.6469 18.5346 10.5 18.1815 10.5 17.769C10.5 17.3565 10.6469 17.0033 10.9408 16.7095C11.2344 16.4158 11.5875 16.269 12 16.269C12.4125 16.269 12.7656 16.4158 13.0592 16.7095C13.3531 17.0033 13.5 17.3565 13.5 17.769C13.5 18.1815 13.3531 18.5346 13.0592 18.8282C12.7656 19.1221 12.4125 19.269 12 19.269ZM12 13.4997C11.5875 13.4997 11.2344 13.3528 10.9408 13.059C10.6469 12.7653 10.5 12.4122 10.5 11.9997C10.5 11.5872 10.6469 11.2341 10.9408 10.9405C11.2344 10.6466 11.5875 10.4997 12 10.4997C12.4125 10.4997 12.7656 10.6466 13.0592 10.9405C13.3531 11.2341 13.5 11.5872 13.5 11.9997C13.5 12.4122 13.3531 12.7653 13.0592 13.059C12.7656 13.3528 12.4125 13.4997 12 13.4997ZM12 7.73047C11.5875 7.73047 11.2344 7.58364 10.9408 7.28997C10.6469 6.99614 10.5 6.64297 10.5 6.23047C10.5 5.81797 10.6469 5.46489 10.9408 5.17122C11.2344 4.87739 11.5875 4.73047 12 4.73047C12.4125 4.73047 12.7656 4.87739 13.0592 5.17122C13.3531 5.46489 13.5 5.81797 13.5 6.23047C13.5 6.64297 13.3531 6.99614 13.0592 7.28997C12.7656 7.58364 12.4125 7.73047 12 7.73047Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Menu /> > WithCustomButton story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_menu_33ee5b"
    data-headlessui-state=""
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      data-headlessui-state=""
      id="headlessui-menu-button-:rk:"
      type="button"
    >
      <div
        class="fpo"
      >
        Menu Button
      </div>
    </button>
  </div>
</div>
`;

exports[`<Menu /> > WithCustomSecondaryButton story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_menu_33ee5b"
    data-headlessui-state=""
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="_button_0829c1 _button--layout-none_0829c1 _button--secondary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
      data-headlessui-state=""
      id="headlessui-menu-button-:rq:"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Secondary Button
      </span>
    </button>
  </div>
</div>
`;

exports[`<Menu /> > WithLongButtonText story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_menu_33ee5b"
    data-headlessui-state=""
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="_button_0829c1 _button--layout-right_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 _menu__button_33ee5b"
      data-headlessui-state=""
      id="headlessui-menu-button-:r8:"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Long Trigger Button Text to Demonstrate Popover Matching
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`<Menu /> > WithShortButtonText story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_menu_33ee5b"
    data-headlessui-state=""
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="_button_0829c1 _button--layout-right_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1 _menu__button_33ee5b"
      data-headlessui-state=""
      id="headlessui-menu-button-:re:"
      type="button"
    >
      <span
        class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
      >
        Menu
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
